<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Homework - Meal Calculator</string>
    <string name="contact_us">Contact Us</string>
    <string name="euro">EUR</string>
    <string name="bulgarian_lev">BGN</string>
    <string name="dollar">USD</string>
    <string name="choose_your_currency">Currency:</string>
    <string name="tv_dish">Dish:</string>
    <string name="tv_desert">Desert:</string>
    <string name="tv_drink">Drink:</string>
    <string name="price">0.00 EUR</string>
    <string name="quantity">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="home_deliver">Home Delivery</string>
    <string name="total_price">Total Price:</string>
    <string name="total">0.00 EUR</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name: TL Nguyen</string>
    <string name="email">Email: tl.nguyen.1987@gmail.com</string>

</resources>
